--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "rollup": "rollup",
     "build:esm": "tsc -p ./tsconfig.json",
     "build:cjs": "rollup -n FluentRanges --amd.id fluent-ranges -g '@fluent/bundle:FluentBundle' -f umd -i ./esm/index.js -o ./index.cjs",
-    "build": "run-s build:esm build:cjs"
+    "build": "run-s build:esm build:cjs",
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -38,6 +39,12 @@
     "url": "https://github.com/angryzor/fluent-ranges/issues"
   },
   "homepage": "https://github.com/angryzor/fluent-ranges#readme",
+  "jest": {
+    "setupFilesAfterEnv": ["jest-extended/all"],
+    "moduleNameMapper": {
+      "(.+)\\.js": "$1"
+    }
+  },
   "peerDependencies": {
     "@fluent/bundle": "^0.17.1"
   },
@@ -50,6 +57,7 @@
     "@types/jest": "^29.0.0",
     "babel-jest": "^29.0.2",
     "jest": "^29.0.2",
+    "jest-extended": "^3.1.0",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.79.0",
     "typescript": "^4.8.2"
